# mkbundlex

./: .gitignore  Makefile.am  configure.in  mkbundle.cs
mkbundlex/: .gitignore  Makefile.am  mkbundlex.sln
mkbundlex/nix_scripts/: mkbundlex  mkbundlex.in
mkbundlex/src/: mkbundlex.cs  mkbundlex.csproj
mkbundlex/src/Properties/: AssemblyInfo.cs
