AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(mkbundlex, 0.1)

dnl Check for pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['pkg-config' is not in your PATH.])
fi

dnl Check for Mono
PKG_CHECK_MODULES(MONO_DEPENDENCY, mono >= 3.0, has_mono=true, has_mono=false)

if test "x$has_mono" = "xtrue"; then
	if test `uname -s` = "Darwin"; then
		AC_PATH_PROG(RUNTIME, mono, no)
		AC_PATH_PROG(CSC, mcs, no)
		LIB_PREFIX=
		LIB_SUFFIX=.dylib
	else
		AC_PATH_PROG(RUNTIME, mono, no)
		AC_PATH_PROG(CSC, mcs, no)
		LIB_PREFIX=.so
		LIB_SUFFIX=
	fi
else
	AC_MSG_ERROR([mono not found])
fi

dnl Check for xbuild
AC_PATH_PROG(XBUILD, xbuild, no)
if test x$XBUILD == 'xno'; then
	AC_MSG_ERROR([xbuild not found])
fi

CS="C#"
if test "x$CSC" = "xno" ; then
    AC_MSG_ERROR([No $CS compiler found])
fi



AC_SUBST(RUNTIME)
AC_SUBST(CSC)
AC_SUBST(XBUILD)
AC_SUBST(LIB_PREFIX)
AC_SUBST(LIB_SUFFIX)

PREFIX=$prefix
AC_SUBST(PREFIX)

AC_OUTPUT([
Makefile	
	mkbundlex/Makefile
])

echo ""
echo "Configuration summary"
echo "---------------------"
echo ""
echo "   * Installation prefix: $PREFIX"
echo "   * compiler: $CSC"
echo "   * xbuild: $XBUILD"
echo ""

